tests/errors/sem2.kt
fun squared(x: Int): Int {
    return x * x
}

fun main(){
    squared(2, 3)
}